# trialmatch-tool-evaluation

./: LICENSE  README.md  pyproject.toml  requirements.txt
artifacts/data_raw/: clb_clinical_trials.csv  formatted_data.csv
trialmatch_tool_evaluation/: __init__.py  _utils.py  compute_metrics.py  constants.py  correlations.py  error_analysis.py  main.py  molecular_alterations_stats.py  nb_trials_stats.py  patient_data.py  plot_metrics.py  preprocess_files.py  statistical_tests.py  wrong_status_trials_stats.py
trialmatch_tool_evaluation/metrics/: __init__.py  base_metrics.py  classification_metrics.py  ranked_metrics.py
